# QaGuru_python_10_16

./: README.md  requirements.txt
resources/: screen_resolutions.py
tests/: conftest.py  test_fixtures.py  test_parametrize.py  test_skip.py
with_poetry/: pyproject.toml
