[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = ["Kirill Ermakov <lvstrng161@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc9"
pytest = "8.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
